--- a/package.json
+++ b/package.json
@@ -1,5 +1,12 @@
 {
+  "name": "bot-grade",
+  "version": "1.0.0",
+  "main": "index.js",
+  "scripts": {
+    "start": "node index.js"
+  },
+  "author": "Auguste",
   "dependencies": {
-    "discord.js": "^12.5.1"
+      "discord.js": "^12.5.1",
   }
 }
